# Xgame

./: .gitignore  BUILD.md  CMakeLists.txt  DesktopGame.cpp  DesktopGame.hpp  README.md  apply_fixes.py  docx_content.txt  write_cpp_part1.py  write_cpp_part2.py  write_cpp_part3.py  write_hpp.py  尘封的星舰工作站(改）.docx
build-verify/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json
src/: DesktopGame.cpp  DesktopGame.cpp.reconstructed  DesktopGame.hpp  main.cpp
